@@ -424,6 +424,16 @@ org.freedesktop.ModemManager.Device.Control    auth_admin_keep
    </para>
   </section>
 
+  <section>
+   <!-- bnc#901013 -->
+   <title>Slow startup in GNOME</title>
+   <para>
+    GNOME autologin can cause a slow boot process.  Probably there is
+    a race between services not correctly marked to depend on each
+    other.  Meanwhile the fix arrives via the update channel, a simple
+    workaround is to disable temporally the GNOME autologin.
+   </para>
+  </section>
 
   <!--
   <section>
